--- a/main.html
+++ b/main.html
@@ -5,9 +5,44 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+	
 <body>
-	<!-- the entire body must be written by student -->
+     <form method="post">
+		 <label class="required" for="name">Name</label>
+		 <br>
+		 <input id="name" type="text" required><br>
+		 <label class="required" for="email">Email</label>
+		 <br>
+		 <input id="email" type="email" required>
+		 <br>
+		 <label class="required"  for="gender">Gender</label>
+		 <br>
+		 <input type="radio" name="gender" required>Male
+		 <br>
+		  <input type="radio" name="gender" required>Male
+		 <br>
+		 <label for="laptop" >Laptop Brand</label>
+		 <select id="laptop" >
+			 <option value="">select your laptop</option>
+			 <option>Apple</option>
+			 <option>Asus</option>
+			 <option>HP</option>
+		 </select>
+		 <br>
+		 <label class="required" for="age">Age</label>
+		 <input type="number" id="age" required>
+		 <br>
+		 <label class="required" for="dob" >Date Of Birth</label>
+		 <input type="date" id="dob" required>
+		 <br>
+		 <label class='required' for="password">Password</label>
+		 <input type="password" id="password" required>
+		 <br>
+		 <label for="portfolio" >Portfolio URL</label>
+		 <input type="url" id="portfolio">
+		 <br>
+		 <button type="submit">Submit Button</button>
+	 </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
